Fixed the overflow-y issue of the page to view the boards

--- a/client/components/boards/boardsList.styl
+++ b/client/components/boards/boardsList.styl
@@ -22,8 +22,14 @@ $spaceBetweenTiles = 16px
 
 .board-list
   margin: 0 ($spaceBetweenTiles/2)
-  padding: 30px;
-  max-height: 100%;
+  margin-left: 0px
+  margin-right: 15px
+  padding: 30px
+  padding-left: 50px
+  padding-right: 49px
+  overflow-y: auto
+  height: 87.7vh
+  float: right
 
   li
     float: left
@@ -199,8 +205,10 @@ $spaceBetweenTiles = 16px
 
 @media screen and (max-width: 800px)
   .board-list
-    height: 100%
-    overflow: scroll
+    height: 87.7vh
+    overflow-y: auto
+    float: right
+    margin-right: 15px
 
     li
       width: 33.3%
